# defi-scanner

./: .gitignore  README.md  docker-compose.yml  run.sh
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_protocol_metadata.py  003_expand_opportunity_universe.py
backend/app/: config.py  main.py
backend/app/alerts/: __init__.py  channels.py  engine.py
backend/app/api/: routes.py
backend/app/calculations/: carry.py  cross_protocol.py  history_agg.py  looping.py  orchestrator.py  ranker.py  rating.py
backend/app/collectors/: __init__.py  aave.py  base.py  compound.py  drift.py  dydx.py  euler.py  fluid.py  funding.py  gmx.py  hyperliquid.py  lending.py  moonwell.py  morpho.py  pendle.py  protocol_metadata.py  restaking.py  (+5 more)
backend/tests/: conftest.py  test_aave_adapter.py  test_alerts.py  test_api.py  test_api_integration.py  test_carry.py  test_collector_integration.py  test_collector_runner.py  test_compound_adapter.py  test_cross_protocol.py  test_drift_adapter.py  test_dydx_adapter.py  test_euler_adapter.py  test_fluid_adapter.py  test_gmx_adapter.py  test_history_agg.py  test_hyperliquid_adapter.py  test_looping.py  test_migrations.py  test_moonwell_adapter.py  test_morpho_adapter.py  test_orchestrator.py  test_pendle_adapter.py  test_protocol_metadata.py  test_protocol_registry.py  test_ranker.py  test_rating.py  test_restaking_adapter.py  test_silo_adapter.py  test_spark_adapter.py  test_stable_lending_adapter.py  test_staking_adapter.py  test_vertex_adapter.py
(+112 files in other folders)
